<resources>
    <string name="app_name">ticket2RideClient</string>
    <string name="user_name_label">User Name</string>
    <string name="password_label">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="register_button">Register</string>
    <string name="register_title">Register to Play!</string>
    <string name="game_selection_label">Select a game to play!</string>
    <string name="create_game_button">Create Game</string>
    <string name="ip_address_label">IP Address</string>
    <string name="start_game_button">Start Game</string>
    <string name="message_goes_here">HI GUYS LOL</string>
    <string name="send">Send</string>
    <string name="dest_cards">Your Destination Cards</string>
    <string name="ok">OK</string>
    <string name="placeholder">IM A PLACEHLODER TETXS</string>
    <string name="completed">Completed</string>
    <string name="train_card_deck_title">Draw Train Card</string>
    <string name="dest_card_deck_title">Draw Destination Cards</string>
    <string name="deck_width_in_dialog">100dp</string>
    <string name="deck_height_in_dialog">100dp</string>
    <string name="train_card_height">70dp</string>
    <string name="train_card_selection_title">Click A Train Card To Pick It Up</string>
    <string name="deck_dialog_train_card_left_padding">4dp</string>
    <string name="deck_dialog_train_card_right_padding">4dp</string>
    <string name="decks_dialog_title">Decks</string>
    <string name="confirm_claim_route_button">Claim Path</string>
    <string name="exit_claim_route_button">Exit</string>
    <string name="choose_color_title">Select A Card Color To Use</string>
    <string name="stats">Player Stats</string>

</resources>
