<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/login_fragment"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/ip_address_label"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <EditText
            android:id="@+id/ip_address_field"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_weight="3"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/user_name_label"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <EditText
            android:id="@+id/user_name_field"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_weight="3"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/password_label"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <EditText
            android:id="@+id/password_field"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_weight="3"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:text="@string/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/register_button"
        android:text="@string/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>